fluxcd/apps/production/ytars/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ytars
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: main
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: authentik
      podSelector:
        matchLabels:
          goauthentik.io/outpost-name: proxy-outpost-public
    ports:
    - port: 8080
      protocol: TCP
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
        - 100.64.0.0/10
        - 169.254.0.0/16
    ports:
    - port: 1637
      protocol: UDP
